Fixed issue where page was 3x too large

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -9,7 +9,7 @@ body {
     color: rgba(255, 255, 255, 1);
     margin: 0;
     padding: 0;
-      background: #2c2c2c;
+      background: #333333;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
