--- a/css/map.css
+++ b/css/map.css
@@ -64,7 +64,7 @@
   padding: 15px;
 }
  #topHeader{
-     width: 500%;
+     width: 100%;
      height: 90px;
      background: #333333;
      top : -20px;
